chore: initial commit

--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -7,6 +7,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@wya/vm-drag": "*"
+    "@wya/vm-drag": "*",
+    "@wya/vm-core": "*",
+    "@wya/vm-assist": "*",
+    "@wya/vm-widget": "*"
   }
 }
