--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wya/vm-core",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "license": "MIT",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@wya/sass": "^1.2.0",
-    "@vue/test-utils": "^2.0.0-rc.17"
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@wya/sass": "^1.2.0"
   }
 }
