--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,6 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@vue/test-utils": "^2.0.0-rc.17",
-    "@wya/sass": "^1.2.0"
+    "@vue/test-utils": "^2.0.0-rc.17"
   }
 }
